fix: Replace toList() with collect(Collectors.toList()) in DHIS2UserService